--- a/sports.css
+++ b/sports.css
@@ -1,4 +1,3 @@
-
 .img3{
 border-radius: 50%;
 width:500px;
@@ -29,6 +28,10 @@ color:#600000;
   font-size: 16px;
   cursor: pointer;
 }
+.img1{
+width:1330px;
+height:750px;
+}
 .button1:hover {
   background-color:#09C;
 }
@@ -48,6 +51,9 @@ opacity:0.5;
   text-align: center;
   font-size: 70px;
   color:white;
+}
+.th1{
+position:center;
 }
 body
 {
